myapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    app: php
  ports:
    - port: 8024
      targetPort: 80
      protocol: TCP
  type: NodePort
