myapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
     - host: arch.homework
       http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: myapp-service
                port:
                  number: 8024
